# py-cffi

./: CMakeLists.txt
lib/: CMakeLists.txt  acks.md
lib/cmake/: add_test.cmake
lib/mylib/src/: CMakeLists.txt  mylib.cxx  mylib.h
lib/mylib/test/: CMakeLists.txt  test_mylib.cxx
src/: ffi_mylib.py  main.py
test/: test_ffi_mylib.py
